--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
       
       <meta name="google-site-verification" content="iSR3cCTKWB1zqHCtUGWFbZggB230CmFZ_utdaRXTOzA" />
-      <link rel="canonical" href="{{ Site.BaseURL }}{{ .File.Path }}">
       <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
@@ -169,11 +168,12 @@
             
 <div class="container-fluid ">
   <div class="row no-gutters">
-    <footer class="mt-5">
+    <footer class="mt-5 col-12">
       <div class="container-fluid">
         <div id="footer-social-wrapper" class="row">
-          <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
-            <svg
+          <div class="col-12">
+            <a href="https://www.facebook.com/islam.sayed8" class="social-icon">
+              <svg
   class="mr-2"
   height="40px"
   version="1.1"
@@ -197,9 +197,9 @@
     </g>
   </g>
 </svg>
-          </a>
-          <a href="https://twitter.com/islam_sayed8" class="social-icon">
-            <svg
+            </a>
+            <a href="https://twitter.com/islam_sayed8" class="social-icon">
+              <svg
   class="mr-2"
   height="40px"
   version="1.1"
@@ -223,12 +223,12 @@
     </g>
   </g>
 </svg>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/islam-sayed-ibrahim"
-            class="social-icon"
-          >
-            <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+            </a>
+            <a
+              href="https://www.linkedin.com/in/islam-sayed-ibrahim"
+              class="social-icon"
+            >
+              <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
  <title/>
 
  &lt;g>
@@ -245,7 +245,9 @@
   </g>
  </g>
 </svg>
-          </a>
+            </a>
+            <p class="my-0 text-left">©2019 Copyright Islam Sayed.</p>
+          </div>
         </div>
       </div>
     </footer>
