--- a/public/tutorials/how-to-trap-focus-inside-a-modal/index.html
+++ b/public/tutorials/how-to-trap-focus-inside-a-modal/index.html
@@ -24,6 +24,12 @@
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
       <link rel="stylesheet" href="/css/styles.css"/>
       
+      <meta property="og:title" content=How&#32;to&#32;Trap&#32;Focus&#32;Inside&#32;a&#32;Modal />
+      <meta property="og:site_name" content="blueturtle.blog" />
+      <meta property="og:type" content="article" />
+      <meta property="og:url" content="https://blueturtle.blog/news/now-use-material-ui-icons-with-super-ease/" />
+      <meta property="og:image" content= />
+      <meta property="og:description " content=An&#32;accessibility&#32;issue&#32;being&#32;solved. />
       <title>
     
         How to Trap Focus Inside a Modal | Blue Turtle Blog
